Clean up NetconfBaseOps
Eliminate duplicated code and modernize dispatch.

Change-Id: I8c37057fb1993541df7ce772777cba891c42a097
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>